@@ -33,6 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/apache">ASL</license>
  <notes>
+* [jan] Allow to set vaction with only start or end date, if Sieve date extension is available.
 * [jan] Add support for Sieve date extension to vacation messages (Request #12520).
 * [mjr] Export active vacation messages via the timeObjects API (Request #10885).
 * [mms] Added a NoSQL (MongoDB) driver for the storage backend.
@@ -1778,6 +1779,7 @@
    </stability>
    <license uri="http://www.horde.org/licenses/apache">ASL</license>
    <notes>
+* [jan] Allow to set vaction with only start or end date, if Sieve date extension is available.
 * [jan] Add support for Sieve date extension to vacation messages (Request #12520).
 * [mjr] Export active vacation messages via the timeObjects API (Request #10885).
 * [mms] Added a NoSQL (MongoDB) driver for the storage backend.
